erDiagram
  USERS ||--|| ACCOUNTS : owns
  USERS ||--o{ ORDERS : places
  USERS ||--o{ POSITIONS : holds
  USERS ||--o{ AUDIT_LOG : audits

  USERS {
    bigint id PK
    string username UK
    string password_hash
    string role
  }
  ACCOUNTS {
    bigint id PK
    bigint user_id FK
    float cash_balance
    string currency
  }
  ORDERS {
    bigint id PK
    bigint user_id FK
    string client_order_id UK
    string symbol
    string side
    int quantity
    float price
    string status
    datetime created_at
    datetime updated_at
  }
  POSITIONS {
    bigint id PK
    bigint user_id FK
    string symbol
    int quantity
    float avg_price
  }
  AUDIT_LOG {
    bigint id PK
    string action
    string resource
    string detail
    string username
    datetime created_at
  }
